# try-gtest

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Greeting.cpp  Greeting.h
test/: CMakeLists.txt  TestGreeting.cpp
